# MetCompC

./: .gitignore  README.md
LibMetComp/: metcomp.h
LibMetComp/inc/: line.h  metcomp.h
MolDyn/: particles.sh
MolDyn/c codes/lennard-jones/: lennard-jones.sh
MolDyn/c codes/particles/: particles.c
MolDyn/inc/: moldyn.h
MolDyn/lennard-jones/: lennard-jones.plot
MolDyn/lib/: main  main.cpp  main.s  moldyn.h  particles.sh
MolDyn/molas/: molas  molas.c  molas.plot  molas.sh
MolDyn/particles/: particles  particles.c  particles.sh
MolDyn/rbs/: rbs  rbs.c  rbs.plot  rbs.sh
btcs/: btcs.f95
ftcs/: ftcs-cpp  ftcs-fort  ftcs-fort-file  ftcs.cpp  ftcs.f95  ftcs.py
lib/cpp/: domain.h  mklib.sh  mylib.cpp  mylib.h
mylib/: CMakeCache.txt  Makefile  a.out  macmklib.sh  main.cpp  mklib.sh
mylib/cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  MetComp.project  MetComp.workspace  cmake_install.cmake  macmklib.sh  main.cpp  mklib.sh
mylib/cpp/inc/: MetComp.h  mylib.h
mylib/cpp/src/: MetComp.cpp  mylib.cpp  mylib.h
mylib/inc/: MetComp.h
mylib/src/: MetComp.cpp  atom.cpp  main.cpp  schrodinger.cpp
pendulum/: pendulum  pendulum.cpp  pendulum.h  pendulum.sh
